RESOLVED FIXED115922
In-band captions are not visible immediately after track mode change
https://bugs.webkit.org/show_bug.cgi?id=115922
Summary In-band captions are not visible immediately after track mode change
Eric Carlson
Reported 2013-05-10 11:14:49 PDT
Changing the mode of an in-band track to "showing" should make any current cue(s) visible immediately.
Attachments
Proposed patch (7.39 KB, patch)
2013-05-10 11:48 PDT, Eric Carlson
no flags
Skip new test on platforms that don't support in-band captions (11.20 KB, patch)
2013-05-10 12:11 PDT, Eric Carlson
no flags
Actually skip the test this time. (11.16 KB, patch)
2013-05-10 12:17 PDT, Eric Carlson
no flags
Eric Carlson
Comment 1 2013-05-10 11:15:50 PDT
Eric Carlson
Comment 2 2013-05-10 11:48:46 PDT
Created attachment 201372 [details] Proposed patch
Eric Carlson
Comment 3 2013-05-10 12:11:36 PDT
Created attachment 201376 [details] Skip new test on platforms that don't support in-band captions
WebKit Commit Bot
Comment 4 2013-05-10 12:12:43 PDT
Attachment 201376 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/media/track/track-in-band-mode-expected.txt', u'LayoutTests/media/track/track-in-band-mode.html', u'LayoutTests/platform/efl/TestExpectations', u'LayoutTests/platform/gtk/TestExpectations', u'LayoutTests/platform/mac/TestExpectations', u'LayoutTests/platform/qt/TestExpectations', u'LayoutTests/platform/win/TestExpectations', u'Source/WebCore/ChangeLog', u'Source/WebCore/html/HTMLMediaElement.cpp']" exit_code: 1 LayoutTests/platform/mac/TestExpectations:1356: Did not find a test name. [test/expectations] [5] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Eric Carlson
Comment 5 2013-05-10 12:17:48 PDT
Created attachment 201377 [details] Actually skip the test this time.
Eric Carlson
Comment 6 2013-05-10 14:12:16 PDT
Note You need to log in before you can comment on or make changes to this bug.